# ipta-2025

./: README.md  h_z_measurements.feather  intro-bayesian-inference.ipynb  local-bib.bib  myst.yml  pyproject.toml  requirements.txt
.github/workflows/: deploy.yml
